--- a/index.html
+++ b/index.html
@@ -7,25 +7,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hold &mdash; 100% Free Fully Responsive HTML5 Bootstrap Template by FREEHTML5.co</title>
+	<title>Parna Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Bootstrap Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Hii, I am Parna, I love to design, read,  and drink tea" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -116,8 +101,8 @@
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
-						<h1>I&acute;m a 30 Year Old UI/UX Web Designer based <span>in</span> New York City</h1>
-						<h2>Crafted by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></h2>
+						<h1>Hii, I am <span>Parna</span>, I love to design, read, and drink tea</h1>
+						<h2><a href="http://freehtml5.co/" target="_blank">Resume</a></h2>
 					</div>
 				</div>
 			</div>
@@ -141,9 +126,12 @@
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>Guide Landing Page</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>MyBMTC app redesign</h2>
+						<h4><b>Project Type:</b> Conceptual</h4>
+						<h4><b>Timeline:</b> 10weeks</h4>
+<!--						<p>Redesign concept for Bengaluru’s bus tracking app</p>-->
+						<p>MyBMTC app is the official travel app of Bengaluru, here's a redesign concept for it with new and improved functionalities.</p>
+						<p><a href="work_2.html" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
@@ -162,15 +150,17 @@
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-						<h2>Sprint for Portfolio</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h2>GIL Website Redesign</h2>
+						<h4><b>Project Type:</b> Commissioned</h4>
+						<h4><b>Timeline:</b> 2.5weeks</h4>
+<!--						<p>Indian Legal-Tech  Website “Go India Legal”  redesign</p>-->
+						<p>Go India Legal needed a website that aligned more on their brand values and was specifically targeted towards a young audience.</p>
 						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
 			</div>
 		</div>
-		
 		<!-- data-colorbg="#2d4059" -->
 		<div class="fh5co-project js-fh5co-waypoint" data-colorbg="" data-next="yes">
 			<div class="container">
@@ -183,9 +173,13 @@
 							<img src="images/work_3_small.jpg" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
+
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>Display for Business Website</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h2>Quickpay- Bill payment app</h2>
+						<h4><b>Project Type:</b> Coursework capstone</h4>
+						<h4><b>Timeline:</b> 4weeks</h4>
+<!--						<p>A one in all bill payment solution for all your bills</p>-->
+						<p>Quickpay was my first project that I did as a part of the UI/UX design Specialization.</p>
 						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
@@ -193,55 +187,53 @@
 			</div>
 		</div>
 		<!-- data-colorbg="#7bc74d" -->
-		<div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="">
-			<div class="container">
-				<div class="fh5co-project-inner row">
-					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
-						<div class="img-holder-1 animate-box">
-							<img src="images/work_4_large.jpg" alt="Free HTML5 Bootstrap Template">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/work_4_small.jpg" alt="Free HTML5 Bootstrap Template">
-						</div>
-					</div>
-					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-						<h2>Slant for Creatives</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
-					</div>
-				</div>
+<!--		<div class="fh5co-project js-fh5co-waypoint fh5co-reverse" data-colorbg="">-->
+<!--			<div class="container">-->
+<!--				<div class="fh5co-project-inner row">-->
+<!--					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">-->
+<!--						<div class="img-holder-1 animate-box">-->
+<!--							<img src="images/work_4_large.jpg" alt="Free HTML5 Bootstrap Template">-->
+<!--						</div>-->
+<!--						<div class="img-holder-2 animate-box">-->
+<!--							<img src="images/work_4_small.jpg" alt="Free HTML5 Bootstrap Template">-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">-->
+<!--						<h2>Slant for Creatives</h2>-->
+<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
+<!--						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>-->
+<!--					</div>-->
+<!--				</div>-->
 
-			</div>
-		</div>
+<!--			</div>-->
+<!--		</div>-->
 		<footer id="fh5co-footer" class="js-fh5co-waypoint">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; 2016 Hold. All Rights Reserved. <br> Created by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> </small> </p>
+<!--						<p><small>&copy; 2020 Hold. All Rights Reserved. <br> Created by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> </small> </p>-->
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-twitter"></i></a>
+								<a href="https://www.linkedin.com/in/parnadesigns/"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-facebook"></i></a>
+								<a href="https://parna-designs.medium.com/"><i class="icon-medium"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://www.behance.net/parnasarkar"><i class="icon-behance"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-dribbble"></i></a>
+								<a href="https://www.instagram.com/parna.designs/"><i class="icon-instagram"></i></a>
+							</li>
+							<li>
+								<a href="https://dribbble.com/Parna"><i class="icon-dribbble"></i></a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</footer>
-
 	</div>
-	
-			
-	
-
 	</body>
 </html>
 
