--- a/work_1.html
+++ b/work_1.html
@@ -7,25 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hold &mdash; 100% Free Fully Responsive HTML5 Bootstrap Template by FREEHTML5.co</title>
+	<title>Parna Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Bootstrap Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Hii, I am Parna, I love to design, read,  and drink tea" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -114,7 +100,7 @@
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
-						<h1>Guide Perfect <span>for</span> Startups</h1>
+						<h1>GIL Website Redesign</h1>
 					</div>
 				</div>
 			</div>
@@ -138,8 +124,14 @@
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> About Project</h3>
 							</div>
 							<div class="col-md-9">
-								<p class="fh5co-lead">Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
-								<p>Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns. Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
+								<p class="fh5co-lead">
+									Go India legal (GIL) is a Indian legal-tech company established with the mission to
+									provide a wide array of legal and government-oriented services. With multifarious
+									services like GST Registration, RTI filing, Consumer Complaint, and a host of
+									others, GIL provides an array of legal services at the fastest times and the
+									cheapest rates. GIL is the first of it’s kind to provide legal services targeted
+									towards the young crowd.
+								</p>
 							</div>
 						</div>
 
@@ -251,19 +243,22 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; 2016 Hold. All Rights Reserved. <br> Created by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> </small> </p>
+<!--						<p><small>&copy; 2016 Hold. All Rights Reserved. <br> Created by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> </small> </p>-->
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-twitter"></i></a>
+								<a href="https://www.linkedin.com/in/parnadesigns/"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-facebook"></i></a>
+								<a href="https://parna-designs.medium.com/"><i class="icon-medium"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://www.behance.net/parnasarkar"><i class="icon-behance"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-dribbble"></i></a>
+								<a href="https://www.instagram.com/parna.designs/"><i class="icon-instagram"></i></a>
+							</li>
+							<li>
+								<a href="https://dribbble.com/Parna"><i class="icon-dribbble"></i></a>
 							</li>
 						</ul>
 					</div>
