--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_1_large.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="primary-proj-image" src="images/work_1_large.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/work_1_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="sec-proj-image" src="images/work_1_small.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
@@ -143,10 +143,10 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_2_large.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="primary-proj-image" src="images/work_2_large.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/work_2_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="sec-proj-image" src="images/work_2_large.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
@@ -158,7 +158,6 @@
 						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 		<!-- data-colorbg="#2d4059" -->
@@ -167,10 +166,10 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_3_large.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="primary-proj-image" src="images/work_3_large.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/work_3_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img class="sec-proj-image" src="images/work_3_small.png" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
 
