--- a/work_1.html
+++ b/work_1.html
@@ -209,17 +209,17 @@
 								<div class="flexslider">
 								  <ul class="slides">
 								    <li>
-								      <a href="work_1.html" class="transition"><img src="images/work_1_large.jpg" /></a>
+								      <a href="work_1.html" class="transition"><img src="images/work_1_large.png" /></a>
 								    </li>
 								    <li>
-								      <a href="work_1.html" class="transition"><img src="images/work_2_large.jpg" /></a>
+								      <a href="work_1.html" class="transition"><img src="images/work_2_large.png" /></a>
 								    </li>
 								    <li>
-								      <a href="work_1.html" class="transition"><img src="images/work_3_large.jpg" /></a>
+								      <a href="work_1.html" class="transition"><img src="images/work_3_large.png" /></a>
 								    </li>
-								    <li>
-								      <a href="work_1.html" class="transition"><img src="images/work_4_large.jpg" /></a>
-								    </li>
+<!--								    <li>-->
+<!--								      <a href="work_1.html" class="transition"><img src="images/work_4_large.jpg" /></a>-->
+<!--								    </li>-->
 								  </ul>
 								</div>
 							</div>
